--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -92,16 +92,15 @@
 ============================ CSS table of contents and Scss Indexing ================================ */
 /* Font Family*/
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400;500;600;700&display=swap');
 
 /* ========================= Variable Css Start ======================== */
 :root {
     /* Font Family Variable */
-    --heading-font: font-family: 'Urbanist', 'Inter', sans-serif;
+     --heading-font: 'SF Pro Display', -apple-system, 'Inter', sans-serif;
     --body-font: 'Inter', sans-serif;
     /* Font Size Variable Start */
     --heading-one: clamp(1.75rem, 0.5948rem + 2.4067vw, 3rem);
-    --heading-two: clamp(1.5rem, 0.5758rem + 1.9254vw, 2.5rem);
+    --heading-two: clamp(1.5rem, 0.5758rem + 1.9254vw, 2.4rem);
     --heading-three: clamp(1.5rem, 1.0379rem + 0.9627vw, 2rem);
     --heading-four: clamp(1.25rem, 0.9518rem + 0.8565vw, 1.5rem);
     --heading-five: clamp(1.125rem, 1.0095rem + 0.2407vw, 1.25rem);
@@ -178,7 +177,7 @@
     --primary-500: #2663F2;
     --primary-600: #0000DF;
     --dark-100: #9d99990f;
-    --dark-500: #242424;
+    --dark-500: #65758b;
     --dark-600: #121212;
     --dark-700: #0D042C;
     --dark-800: #171717;
@@ -11697,6 +11696,24 @@ button.show {
     font-weight: 400 !important;
 }
 
+.ul4 li {
+  display: table;
+  list-style: none;
+  padding-left: 0px;
+    line-height: 30px;
+  color: var(--dark-700);
+  font-weight: 400 !important;
+}
+
+.ul4 li span {
+  display: table-cell;
+  padding-right: .6em;
+  font-size: var(--heading-five);
+  color: hsl(var(--heading-color));
+  line-height: 1.2;
+  font-weight: 700;
+}
+
 .white-image {
     filter: brightness(0) invert(1);
     -webkit-filter: brightness(0) invert(1);
@@ -11739,7 +11756,7 @@ button.show {
     width: 50%;
     height: 100%;
     background: linear-gradient(90deg, rgba(38, 99, 242, 0) 0%, #2663F2 100%);
-    animation: movingLine 3s linear infinite;
+    animation: movingLine 2s linear infinite;
   }
   
   /* Step number styles */
