--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -115,11 +115,15 @@
     /* template main color */
     /* --main-h: 222;
     --main-s: 89%;
-    --main-l: 55%; */
-
-    --main-h: 202;
+    --main-l: 55%; 
+     --main-h: 202;
     --main-s: 73%;
     --main-l: 54%;
+    */
+
+    --main-h: 233.4;
+    --main-s: 46.2%;
+    --main-l: 36.6%;
     --main: var(--main-h) var(--main-s) var(--main-l);
     /* White Color */
     --white: 0 0% 100%;
@@ -169,17 +173,17 @@
     --main-700: hsl(var(--main-h), var(--main-s), calc(var(--main-l) - var(--main-l) * 0.1));
     --main-800: hsl(var(--main-h), var(--main-s), calc(var(--main-l) - var(--main-l) * 0.2));
     --main-900: hsl(var(--main-h), var(--main-s), calc(var(--main-l) - var(--main-l) * 0.3));
-    --base-two-10: #36A2DF1A;
+    --base-two-10: #353F901A;
     --base-two-100: #12121299;
     --base-two-200: #00998B0D;
-    --base-two-300: #36A2DF99;
-    --base-two-600: #36A2DF;
-    /* --base-two-600: #36A2DF; */
+    --base-two-300: #353F9099;
+    --base-two-600: #353F90;
+    /* --base-two-600: #353F90; */
     --primary-05: #5D69F40D;
     --primary-50: #101010;
     --primary-100: #4A91A7;
-    --primary-400: #36A2DF;
-    --primary-500: #36A2DF;
+    --primary-400: #353F90;
+    --primary-500: #353F90;
     --primary-600: #0000DF;
     --dark-100: #9d99990f;
     --dark-500: #65758b;
@@ -206,9 +210,9 @@
     --warning-200: #FEF08A;
     --warning-300: #FDE047;
     --warning-400: #74CDFF;
-    --warning-500: #36A2DF;
+    --warning-500: #353F90;
     --warning-600: #FF9F29;
-    --warning-700: #36A2DF;
+    --warning-700: #353F90;
     --warning-800: #353F90;
     --warning-900: #0000FF;
     --danger-05: #FF61610D;
@@ -218,9 +222,9 @@
     --danger-200: #FEF08A;
     --danger-300: #FDE047;
     --danger-400: #74CDFF;
-    --danger-500: #36A2DF;
+    --danger-500: #353F90;
     --danger-600: #ED0000;
-    --danger-700: #36A2DF;
+    --danger-700: #353F90;
     --danger-800: #353F90;
     --danger-900: #0000FF;
     --font-xs: 0.75rem;
@@ -588,7 +592,7 @@ input[type=number] {
 }
 
 .form-switch .form-check-input:checked {
-    background-color: #36A2DF;
+    background-color: #353F90;
 }
 
 .form-switch .form-check-input:checked::before {
@@ -2681,11 +2685,11 @@ input:focus-visible {
 }
 
 .tw-border-base-two-600-dashed {
-    border: 1px dashed #36A2DF;
+    border: 1px dashed #353F90;
 }
 
 .tw-hover-border-bottom-base-two-600:hover {
-    border-bottom: 3px solid #36A2DF;
+    border-bottom: 3px solid #353F90;
 }
 
 .tw-hover-border-black:hover {
@@ -2705,7 +2709,7 @@ input:focus-visible {
 }
 
 .border-bottom-two-px-solid {
-    border-bottom: 3px solid #36A2DF;
+    border-bottom: 3px solid #353F90;
 }
 
 .border-neutral-two-px-solid {
@@ -2717,11 +2721,11 @@ input:focus-visible {
 }
 
 .border-base-two-100 {
-    border: 2px dashed #36A2DF;
+    border: 2px dashed #353F90;
 }
 
 .border-bottom-base-two-600 {
-    border-bottom: 3px solid #36A2DF;
+    border-bottom: 3px solid #353F90;
 }
 
 .border-neutral-1px-solid {
@@ -2749,7 +2753,7 @@ input:focus-visible {
 }
 
 .border-warning-600-2px {
-    border: 2px solid #36A2DF;
+    border: 2px solid #353F90;
 }
 
 .border-neutral-200 {
@@ -2761,7 +2765,7 @@ input:focus-visible {
 }
 
 .border-primary-400-1 {
-    border: 1px solid #36A2DF;
+    border: 1px solid #353F90;
 }
 
 .border-primary-600 {
@@ -3325,7 +3329,7 @@ input:focus-visible {
 }
 
 .hover-bg-base-two-600:hover {
-    background: #36A2DF;
+    background: #353F90;
 }
 
 .hover-border-bottom:hover {
@@ -3365,7 +3369,7 @@ input:focus-visible {
 }
 
 .focus-visible-border-main-600:focus-visible {
-    border: 1px solid #36A2DF !important;
+    border: 1px solid #353F90 !important;
     outline: 0;
 }
 
@@ -4056,7 +4060,7 @@ input:focus-visible {
 }
 
 .group:hover .group-hover-border-base-two-600 {
-    border-bottom: 2px solid #36A2DF !important;
+    border-bottom: 2px solid #353F90 !important;
 }
 
 .group-hover-text-transition {
@@ -8607,7 +8611,7 @@ input:focus-visible {
 .header-item-link::before {
     position: absolute;
     content: "";
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: 6px;
     left: 4px;
     width: 98px;
@@ -8620,7 +8624,7 @@ input:focus-visible {
 .header-item-link:hover::before {
     position: absolute;
     content: "";
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: -6px;
     left: -5px;
     width: 98px;
@@ -8889,7 +8893,7 @@ input:focus-visible {
 .banner-item-link::before {
     position: absolute;
     content: "";
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: 4px;
     left: 4px;
     width: 100%;
@@ -8902,7 +8906,7 @@ input:focus-visible {
 .banner-item-link:hover::before {
     position: absolute;
     content: "";
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: -4px;
     left: -4px;
     width: 100%;
@@ -9013,7 +9017,7 @@ input:focus-visible {
     content: "";
     width: 281px;
     height: 52px;
-    background: #36A2DF;
+    background: #353F90;
     z-index: -1;
     top: 6px;
     left: 7px;
@@ -9026,7 +9030,7 @@ input:focus-visible {
     content: "";
     width: 281px;
     height: 52px;
-    background: #36A2DF;
+    background: #353F90;
     z-index: -1;
     top: -6px;
     left: -5px;
@@ -9087,7 +9091,7 @@ input:focus-visible {
     z-index: -1;
     top: 8px;
     left: 8px;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 0.5rem;
     transition: 0.4s;
 }
@@ -9100,7 +9104,7 @@ input:focus-visible {
     z-index: -1;
     top: -8px;
     left: -8px;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 0.5rem;
 }
 
@@ -9113,7 +9117,7 @@ input:focus-visible {
     font-size: 16px;
     font-weight: 500;
     color: white;
-    background-color: #36A2DF;
+    background-color: #353F90;
     /* Blue button color */
     border-radius: 0.5rem;
     text-decoration: none;
@@ -9141,7 +9145,7 @@ input:focus-visible {
 }
 
 .btn-link:hover {
-  color: var(--dark-900) !important;
+  color: var(--neutral-200) !important;
 }
 
 .btn-link-pre {
@@ -9222,7 +9226,7 @@ input:focus-visible {
     width: 131px;
     height: 55px;
     z-index: -1;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 0.5rem;
     top: -3px;
     left: -3px;
@@ -9274,7 +9278,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     top: 3px;
     left: 3px;
@@ -9287,7 +9291,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     top: -3px;
     left: -3px;
@@ -9353,7 +9357,7 @@ input:focus-visible {
 .our-serbices-item-link::before {
     position: absolute;
     content: "";
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: 4px;
     left: 4px;
     width: 100%;
@@ -9366,7 +9370,7 @@ input:focus-visible {
 .our-serbices-item-link:hover::before {
     position: absolute;
     content: "";
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: -4px;
     left: -4px;
     width: 100%;
@@ -9415,7 +9419,7 @@ input:focus-visible {
     top: 4px;
     left: 4px;
     z-index: -1;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 0.5rem;
     transition: 0.4s;
 }
@@ -9428,7 +9432,7 @@ input:focus-visible {
     top: -4px;
     left: -3px;
     z-index: -1;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 0.5rem;
 }
 
@@ -9437,7 +9441,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 12px;
     top: 4px;
     left: 4px;
@@ -9454,7 +9458,7 @@ input:focus-visible {
     top: 4px;
     left: 4px;
     z-index: -1;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 0.5rem;
     transition: 0.4s;
 }
@@ -9467,7 +9471,7 @@ input:focus-visible {
     top: -4px;
     left: -4px;
     z-index: -1;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 0.5rem;
 }
 
@@ -9516,7 +9520,7 @@ input:focus-visible {
 .our-services-three::before {
     position: absolute;
     content: "";
-    background-color: #36A2DF;
+    background-color: #353F90;
     max-width: 948px;
     width: 100%;
     height: 100%;
@@ -9611,7 +9615,7 @@ input:focus-visible {
 }
 
 .swiper-pagination-bullet-active {
-    background-color: #36A2DF;
+    background-color: #353F90;
 }
 
 /*==================== our services three css end =======================*/
@@ -9643,7 +9647,7 @@ input:focus-visible {
 .fast-safe::before {
     position: absolute;
     content: "";
-    background: linear-gradient(0deg, #36A2DF 0%, rgba(37, 87, 236, 0) 100%);
+    background: linear-gradient(0deg, #353F90 0%, rgba(37, 87, 236, 0) 100%);
     width: 3px;
     height: 201px;
     animation: upDown 24s linear infinite;
@@ -9845,7 +9849,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     z-index: -1;
     top: 4px;
     left: 4px;
@@ -9858,7 +9862,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     z-index: -1;
     top: -4px;
     left: -4px;
@@ -9964,7 +9968,7 @@ input:focus-visible {
     font-family: "Phosphor";
     width: 40px;
     height: 40px;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     color: #fff;
     display: flex;
@@ -10001,7 +10005,7 @@ input:focus-visible {
 
 .nav-pills .nav-link-three.active,
 .nav-pills .show>.nav-link-three {
-    background-color: #36A2DF !important;
+    background-color: #353F90 !important;
     color: #FFFFFF !important;
     border-bottom: 3px solid #AEFF1C;
     border-radius: 12px;
@@ -10043,7 +10047,7 @@ input:focus-visible {
     z-index: -1;
     top: 4px;
     left: 4px;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 10px;
     transition: 0.4s;
 }
@@ -10056,7 +10060,7 @@ input:focus-visible {
     z-index: -1;
     top: -4px;
     left: -4px;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 10px;
 }
 
@@ -10068,7 +10072,7 @@ input:focus-visible {
     z-index: -1;
     top: 4px;
     left: 4px;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 10px;
     transition: 0.4s;
 }
@@ -10081,7 +10085,7 @@ input:focus-visible {
     z-index: -1;
     top: -4px;
     left: -4px;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 10px;
     transition: 0.4s;
 }
@@ -10161,7 +10165,7 @@ input:focus-visible {
     top: 3px;
     left: 3px;
     z-index: -1;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 0.5rem;
     transition: 0.4s;
 }
@@ -10174,7 +10178,7 @@ input:focus-visible {
     top: -3px;
     left: -3px;
     z-index: -1;
-    background: #36A2DF;
+    background: #353F90;
     border-radius: 0.5rem;
 }
 
@@ -10184,7 +10188,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     z-index: -1;
     top: 4px;
     left: 4px;
@@ -10197,7 +10201,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     z-index: -1;
     top: -4px;
     left: -4px;
@@ -10227,7 +10231,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     top: 3px;
     left: 3px;
@@ -10240,7 +10244,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     top: -3px;
     left: -3px;
@@ -10291,7 +10295,7 @@ input:focus-visible {
 
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
-    background-color: #36A2DF !important;
+    background-color: #353F90 !important;
     color: #fff !important;
 }
 
@@ -10332,7 +10336,7 @@ input:focus-visible {
     top: 4px;
     left: 4px;
     border-radius: 0.5rem;
-    background: #36A2DF;
+    background: #353F90;
     transition: 0.4s;
 }
 
@@ -10345,7 +10349,7 @@ input:focus-visible {
     top: -4px;
     left: -4px;
     border-radius: 0.5rem;
-    background: #36A2DF;
+    background: #353F90;
 }
 
 .platform-two-link::before {
@@ -10353,7 +10357,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: 4px;
     left: 4px;
     z-index: -1;
@@ -10366,7 +10370,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: -4px;
     left: -4px;
     z-index: -1;
@@ -10480,7 +10484,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     z-index: -1;
     top: 4px;
     left: 4px;
@@ -10493,7 +10497,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     z-index: -1;
     top: -4px;
     left: -3px;
@@ -10511,7 +10515,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: 3px;
     left: 3px;
     z-index: -1;
@@ -10524,7 +10528,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: -4px;
     left: -4px;
     z-index: -1;
@@ -10559,7 +10563,7 @@ input:focus-visible {
 .our-pricing-plan-three-link::before {
     position: absolute;
     content: "";
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: 4px;
     left: 4px;
     width: 100%;
@@ -10574,7 +10578,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     top: 3px;
     left: 3px;
@@ -10587,7 +10591,7 @@ input:focus-visible {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     top: -3px;
     left: -3px;
@@ -10653,7 +10657,7 @@ input:focus-visible {
 }
 
 .header-nav-menu__item .activePage .header-nav-submenu__link {
-    background-color: #36A2DF !important;
+    background-color: #353F90 !important;
     color: #FFFFFF;
     border-radius: 12px;
 }
@@ -10878,7 +10882,7 @@ button.show {
     top: 4px;
     left: 4px;
     border-radius: 8px;
-    background-color: #36A2DF;
+    background-color: #353F90;
     z-index: -1;
     transition: 0.4s;
 }
@@ -10891,7 +10895,7 @@ button.show {
     top: -3px;
     left: -3px;
     border-radius: 8px;
-    background-color: #36A2DF;
+    background-color: #353F90;
     z-index: -1;
 }
 
@@ -10974,7 +10978,7 @@ button.show {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: 3px;
     left: 3px;
     z-index: -1;
@@ -10987,7 +10991,7 @@ button.show {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     top: -3px;
     left: -3px;
     z-index: -1;
@@ -11001,7 +11005,7 @@ button.show {
     height: 100%;
     top: 5px;
     left: 4px;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     z-index: -1;
     transition: 0.4s;
@@ -11014,7 +11018,7 @@ button.show {
     height: 100%;
     top: -5px;
     left: -4px;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     z-index: -1;
 }
@@ -11079,7 +11083,7 @@ button.show {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     top: 4px;
     left: 4px;
@@ -11092,7 +11096,7 @@ button.show {
     content: "";
     width: 100%;
     height: 100%;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     top: -4px;
     left: -4px;
@@ -11135,7 +11139,7 @@ button.show {
     height: 100%;
     top: 4px;
     left: 4px;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     z-index: -1;
     transition: 0.5s;
@@ -11148,7 +11152,7 @@ button.show {
     height: 100%;
     top: -4px;
     left: -4px;
-    background-color: #36A2DF;
+    background-color: #353F90;
     border-radius: 8px;
     z-index: -1;
 }
@@ -11764,7 +11768,7 @@ button.show {
     left: 0;
     width: 50%;
     height: 100%;
-    background: linear-gradient(90deg, rgba(38, 99, 242, 0) 0%, #36A2DF 100%);
+    background: linear-gradient(90deg, rgba(38, 99, 242, 0) 0%, #353F90 100%);
     animation: movingLine 2s linear infinite;
   }
   
